# dune_scene

./: .gitignore  Cargo.toml  README.md  compile_shaders.sh  index.html  todo.md
animation/: Cargo.toml
animation/src/: lib.rs
cascaded-shadow-maps/: Cargo.toml
cascaded-shadow-maps/src/: lib.rs
models/: cube.blend  cube.glb  dune.glb  explosion.glb  juggling_balls.glb  landcraft.blend  landcraft.glb  landcraft.xcf  mouse.blend  mouse.glb  pirate_ship.blend  pump.glb  ship.blend  ship.glb  ship.xcf
pkg/: dune-scene.d.ts  dune-scene.js
primitives/: Cargo.toml
primitives/src/: lib.rs
shaders/: alpha_circle.frag  animation.comp  animation_part_2.comp  bake_height_map.frag  bake_height_map.vert  blit_to_srgb.frag  brdf.glsl  compute_joint_transforms.comp  flat_colour.frag  fullscreen_tri.vert  land_craft.vert  land_craft_movement.comp  line.vert  particles.vert  particles_movement.comp  scene.frag  scene.vert  shadows.glsl  ship.frag  ship.vert  ship_movement.comp  ship_shadows.vert  structs.glsl  sun_dir.vert  tonemap.frag  utils.glsl
shaders/animated_model/: shader.frag  shader.vert  shadows.vert
shaders/animation/: compute_joint_transforms.comp  interpolation.glsl  sample_generic.comp  sample_rotations.comp  sample_scales.comp  sample_translations.comp  sampling.glsl  set_global_transforms.comp
shaders/compiled/: alpha_circle.frag.spv  animated_model_shader.frag.spv  animated_model_shader.vert.spv  animated_model_shadows.vert.spv  animation.comp.spv  animation_compute_joint_transforms.comp.spv  animation_part_2.comp.spv  animation_sample_rotation.comp.spv  animation_sample_rotations.comp.spv  animation_sample_scales.comp.spv  animation_sample_translations.comp.spv  animation_set_global_transforms.comp.spv  bake_height_map.frag.spv  bake_height_map.vert.spv  blit_to_srgb.frag.spv  compute_joint_transforms.comp.spv  explosions_shader.vert.spv  flat_colour.frag.spv  fullscreen_tri.vert.spv  land_craft.vert.spv  land_craft_movement.comp.spv  land_craft_shader.frag.spv  land_craft_shader.vert.spv  land_craft_shadows.vert.spv  line.vert.spv  particles.vert.spv  particles_movement.comp.spv  particles_shader.vert.spv  scene.frag.spv  scene.vert.spv  scene_shadows.vert.spv  ship.frag.spv  ship.vert.spv  ship_movement.comp.spv  ship_shader.frag.spv  ship_shader.vert.spv  ship_shadows.vert.spv  sun_dir.vert.spv  tonemap.frag.spv
shaders/explosions/: shader.frag  shader.vert
shaders/includes/: animation.glsl  matrices.glsl  rotor.glsl  shadows.glsl  similarity.glsl  structs.glsl  utils.glsl
shaders/land_craft/: movement.comp  shader.frag  shader.vert  shadows.vert
shaders/particles/: movement.comp  shader.vert
shaders/scene/: shader.frag  shader.vert  shadows.vert
shaders/ship/: movement.comp  shader.frag  shader.vert  shadows.vert
src/: main.rs  model_loading.rs  resource_creation.rs  resources_and_pipelines.rs
wasm/: build.sh
wasm/pkg/: dune-scene.js  dune-scene_bg.wasm.d.ts
