[package]
name = "dune-scene"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytemuck = "1.5.1"
gltf = { version = "0.15.2", default-features = false, features = ["utils", "names", "KHR_lights_punctual"] }
image = { version = "0.23.13", default-features = false, features = ["png"] }
pollster = "0.2.1"
ultraviolet = "0.7.5"
wgpu = "0.7.0"
winit = "0.24.0"
env_logger = { version = "0.8.3", default-features = false, features = ["humantime", "atty", "termcolor"] }
imgui = "0.7.0"
imgui-wgpu = "0.14.0"
imgui-winit-support = "0.7.0"
rand = "0.8.3"

primitives = { path = "primitives" }
cascaded-shadow-maps = { path = "cascaded-shadow-maps" }
animation = { path = "animation" }

# Compile all dependencies in release mode
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    ".",
    "primitives",
    "cascaded-shadow-maps",
    "animation",
]
