[package]
name = "dune-scene"
version = "0.1.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
bytemuck = "1.5.1"
gltf = { version = "0.15.2", default-features = false, features = ["utils", "names", "KHR_lights_punctual"] }
image = { version = "0.23.13", default-features = false, features = ["png"] }
pollster = "0.2.1"
ultraviolet = { git = "https://github.com/termhn/ultraviolet" }
wgpu = "0.7.0"
winit = "0.24.0"
env_logger = { version = "0.8.3", default-features = false, features = ["humantime", "atty", "termcolor"] }
egui_wgpu_backend = "0.5.0"
egui_winit_platform = "0.5.0"
egui = "0.10.0"
rand = "0.8.3"
wgpu-profiler = "0.3.1"

primitives = { path = "primitives" }
cascaded-shadow-maps = { path = "cascaded-shadow-maps" }
animation = { path = "animation" }

getrandom = { version = "0.2.2", features = ["wasm-bindgen", "js"], optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
console_log = { version = "0.2.0", optional = true }
log = { version = "0.4.14", optional = true }
wasm-bindgen-futures = { version = "0.4.19", optional = true }
web-sys = { version = "0.3.45", optional = true }

# Compile all dependencies in release mode
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    ".",
    "primitives",
    "cascaded-shadow-maps",
    "animation",
]

[features]
wasm = [
    "getrandom",
    "console_error_panic_hook",
    "console_log",
    "log",
    "wasm-bindgen-futures",
    "web-sys",
    "winit/web-sys",
    "egui_wgpu_backend/web"
]
